# Urho3D-plugin-for-OBS-Studio

./: CMakeLists.txt  README.md  Urho3DModule.cpp  Urho3DModule.h  Urho3DPlugin.cpp  Urho3DPlugin.h  urho3d_plugin.cpp
Images/: README.md
